--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -247,4 +247,10 @@
 
     <!-- Units -->
     <string name="unit_seconds">seconds</string>
+
+    <!-- Screen Off animation -->
+    <string name="screen_off_animation_title">Screen off animation</string>
+    <string name="screen_off_animation_default">Default</string>
+    <string name="screen_off_animation_crt">CRT</string>
+    <string name="screen_off_animation_scale">Scale</string>
 </resources>
