--- a/res/values/evolution_colors.xml
+++ b/res/values/evolution_colors.xml
@@ -7,5 +7,5 @@
 <resources
     xmlns:androidprv="http://schemas.android.com/apk/prv/res/android">
 
-    <color name="homepage_evolution_background">#0060FF</color>
+    <color name="option_border_default">#5f6368</color>
 </resources>
