--- a/res/xml/evolution_settings_themes.xml
+++ b/res/xml/evolution_settings_themes.xml
@@ -9,4 +9,34 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/themes_title">
 
+    <PreferenceCategory
+        android:key="themes_fonts_category"
+        android:title="@string/themes_fonts_category">
+
+        <!-- System font -->
+        <Preference
+            android:key="android.theme.customization.fonts"
+            android:title="@string/themes_system_font_title"
+            android:summary="@string/themes_system_font_summary"
+            android:fragment="org.evolution.settings.fragments.themes.Fonts"/>
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="themes_icons_category"
+        android:title="@string/themes_icons_category">
+
+        <!-- System icons -->
+        <Preference
+            android:key="android.theme.customization.icon_pack"
+            android:title="@string/themes_system_icons_title"
+            android:summary="@string/themes_system_icons_summary"
+            android:fragment="org.evolution.settings.fragments.themes.SystemIcons"/>
+
+        <!-- Icon shape -->
+        <Preference
+            android:key="android.theme.customization.adaptive_icon_shape"
+            android:title="@string/themes_icon_shape_title"
+            android:summary="@string/themes_icon_shape_summary"
+            android:fragment="org.evolution.settings.fragments.themes.IconShapes"/>
+    </PreferenceCategory>
 </PreferenceScreen>
