Evolver: Add Navbar styles
Signed-off-by: AnierinB <anierin@evolution-x.org>

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -45,6 +45,9 @@
     <string name="themes_signal_icon_summary">Set signal icon style</string>
     <string name="themes_wifi_icon_title">Wi-Fi icon</string>
     <string name="themes_wifi_icon_summary">Set Wi-Fi icon style</string>
+    <string name="themes_navigation_bar_category">Navigation bar</string>
+    <string name="themes_navigation_bar_icons_title">Navigation bar icons</string>
+    <string name="themes_navigation_bar_icons_summary">Set navigation bar icon style</string>
 
     <!-- About -->
     <string name="about_info">Evolution X aims to provide users with a Pixel-like feel at first glance, with additional features at your disposal</string>
