Evolver: Add support for Lock screen clock fonts
After r16, a commit to cleanup the KeyguardClockSwtich and unify it's structure was merged.
Also, this added a new resource into the frameworks core, which allows us to overlay the custom clock font.
So, we need to overlays now to customize this. This makes me really happy because it removes the ugly method that we were doing years ago.

@neobuddy89: Because Kang = German Enginering. LMAO.

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: AnierinB <anierin@evolution-x.org>

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -33,6 +33,8 @@
     <string name="themes_fonts_category">Fonts</string>
     <string name="themes_system_font_title">System font</string>
     <string name="themes_system_font_summary">Set system font style</string>
+    <string name="themes_lock_screen_clock_font_title">Lock screen clock font</string>
+    <string name="themes_lock_screen_clock_font_summary">Set lock screen clock font style</string>
     <string name="themes_icons_category">Icons</string>
     <string name="themes_system_icons_title">System Icons</string>
     <string name="themes_system_icons_summary">Set system icon style</string>
