--- a/res/xml/evolution_settings_status_bar.xml
+++ b/res/xml/evolution_settings_status_bar.xml
@@ -9,4 +9,16 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/status_bar_title">
 
+    <PreferenceCategory
+        android:key="status_bar_icons_category"
+        android:title="@string/status_bar_icons_category">
+
+        <!-- Status bar tuner -->
+        <Preference
+            android:key="status_bar_icons"
+            android:title="@string/status_bar_tuner_title"
+            android:summary="@string/status_bar_tuner_summary">
+                <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
+        </Preference>
+    </PreferenceCategory>
 </PreferenceScreen>
