--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -40,6 +40,11 @@
     <string name="themes_system_icons_summary">Set system icon style</string>
     <string name="themes_icon_shape_title">Icon shape</string>
     <string name="themes_icon_shape_summary">Set system icon shape</string>
+    <string name="themes_status_bar_icons_category">Status bar icons</string>
+    <string name="themes_signal_icon_title">Signal icon</string>
+    <string name="themes_signal_icon_summary">Set signal icon style</string>
+    <string name="themes_wifi_icon_title">Wi-Fi icon</string>
+    <string name="themes_wifi_icon_summary">Set Wi-Fi icon style</string>
 
     <!-- About -->
     <string name="about_info">Evolution X aims to provide users with a Pixel-like feel at first glance, with additional features at your disposal</string>
