--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -84,6 +84,11 @@
     <string name="status_bar_tuner_title">Status bar tuner</string>
     <string name="status_bar_tuner_summary">Choose which system icons can be shown</string>
 
+    <!-- Lock screen -->
+    <string name="lock_screen_battery_status_category">Charging status</string>
+    <string name="lock_screen_show_stats_title">Show stats</string>
+    <string name="lock_screen_show_stats_summary">Display current, voltage, wattage, and temperature stats while charging</string>
+
     <!-- About -->
     <string name="about_info">Evolution X aims to provide users with a Pixel-like feel at first glance, with additional features at your disposal</string>
     <string name="about_website_title">Website</string>
