--- a/res/xml/evolution_settings_lock_screen.xml
+++ b/res/xml/evolution_settings_lock_screen.xml
@@ -9,4 +9,15 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/lock_screen_title">
 
+    <PreferenceCategory
+        android:key="lock_screen_battery_status_category"
+        android:title="@string/lock_screen_battery_status_category">
+
+        <!-- Show stats -->
+        <org.evolution.settings.preferences.SystemSettingSwitchPreference
+            android:key="lock_screen_show_stats"
+            android:title="@string/lock_screen_show_stats_title"
+            android:summary="@string/lock_screen_show_stats_summary"
+            android:defaultValue="true" />
+    </PreferenceCategory>
 </PreferenceScreen>
