--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -85,6 +85,27 @@
     <string name="lock_screen_show_stats_title">Show stats</string>
     <string name="lock_screen_show_stats_summary">Display current, voltage, wattage, and temperature stats while charging</string>
 
+    <!-- Miscellaneous -->
+    <string name="miscellaneous_spoofing_category">Spoofing</string>
+
+    <!-- Miscellaneous/Spoofing -->
+    <string name="spoofing_title">Component spoofing</string>
+    <string name="spoofing_summary">Bypass app restrictions by spoofing components</string>
+    <string name="spoofing_system_wide_category">System-Wide</string>
+    <string name="spoofing_pif_toggle_title">Play Integrity fix</string>
+    <string name="spoofing_pif_toggle_summary">Use the ROM\'s built-in Play Integrity fix values</string>
+    <string name="spoofing_pif_values_title">Play Integrity fix values</string>
+    <string name="spoofing_pif_values_summary">View current values used to spoof GMS for Play Integrity API certification</string>
+    <string name="spoofing_pixel_props_title">Pixel props</string>
+    <string name="spoofing_pixel_props_summary">Spoof the device as a Pixel 8 Pro for all Google apps</string>
+    <string name="spoofing_storage_encryption_title">Storage encryption</string>
+    <string name="spoofing_storage_encryption_summary">Spoof the device storage encryption status to \'Encrypted\'</string>
+    <string name="spoofing_app_specific_category">App-Specific</string>
+    <string name="spoofing_photos_title">Unlimited Photos storage</string>
+    <string name="spoofing_photos_summary">Spoof the device as a Pixel XL for the Google Photos app to unlock unlimited image backup storage</string>
+    <string name="spoofing_games_title">Higher FPS in games</string>
+    <string name="spoofing_games_summary">Spoof the device as different models for select games to unlock higher FPS</string>
+
     <!-- About -->
     <string name="about_info">Evolution X aims to provide users with a Pixel-like feel at first glance, with additional features at your disposal</string>
     <string name="about_website_title">Website</string>
