--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -98,6 +98,11 @@
     <string name="status_bar_projection_privacy_indicator_title">Screen projection</string>
     <string name="status_bar_projection_privacy_indicator_summary">Display an indicator when the screen is being projected</string>
 
+    <!-- Quick settings -->
+    <string name="quick_settings_lock_screen_category">Lock screen</string>
+    <string name="quick_settings_secure_lock_screen_title">Hide on secure lock screen</string>
+    <string name="quick_settings_secure_lock_screen_summary">Hide all quick settings in the notification shade while the device is locked</string>
+
     <!-- Lock screen -->
     <string name="lock_screen_battery_status_category">Charging status</string>
     <string name="lock_screen_show_stats_title">Show stats</string>
