--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -106,6 +106,11 @@
     <string name="quick_settings_secure_lock_screen_title">Hide on secure lock screen</string>
     <string name="quick_settings_secure_lock_screen_summary">Hide all quick settings in the notification shade while the device is locked</string>
 
+    <!-- Power menu -->
+    <string name="power_menu_lock_screen_category">Lock screen</string>
+    <string name="power_menu_lock_screen_secure_title">Show on secure lock screen</string>
+    <string name="power_menu_lock_screen_secure_summary">Show the power menu while the device is locked</string>
+
     <!-- Lock screen -->
     <string name="lock_screen_battery_status_category">Charging status</string>
     <string name="lock_screen_show_stats_title">Show stats</string>
