--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -94,6 +94,11 @@
     <string name="status_bar_projection_privacy_indicator_title">Screen projection</string>
     <string name="status_bar_projection_privacy_indicator_summary">Display an indicator when the screen is being projected</string>
 
+    <!-- Notifications -->
+    <string name="notifications_sounds_vibration_category">Sounds &amp; vibration</string>
+    <string name="notifications_alert_display_on_title">Alert while display on</string>
+    <string name="notifications_alert_display_on_summary">Play sound and vibration for notifications while the display is on</string>
+
     <!-- Quick settings -->
     <string name="quick_settings_interface_category">Interface</string>
     <string name="quick_settings_floating_clear_all_title">Floating clear all button</string>
