--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -102,6 +102,9 @@
     <string name="notifications_sounds_vibration_category">Sounds &amp; vibration</string>
     <string name="notifications_alert_display_on_title">Alert while display on</string>
     <string name="notifications_alert_display_on_summary">Play sound and vibration for notifications while the display is on</string>
+    <string name="notifications_buttons_category">Buttons</string>
+    <string name="notifications_kill_app_button_title">Kill app</string>
+    <string name="notifications_kill_app_button_summary">Show a kill app button in the notification\'s longpress menu</string>
 
     <!-- Quick settings -->
     <string name="quick_settings_interface_category">Interface</string>
