--- a/res/xml/evolution_settings_notifications.xml
+++ b/res/xml/evolution_settings_notifications.xml
@@ -20,4 +20,16 @@
             android:summary="@string/notifications_alert_display_on_summary"
             android:defaultValue="true" />
     </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="notifications_buttons_category"
+        android:title="@string/notifications_buttons_category">
+
+        <!-- Kill app button -->
+        <org.evolution.settings.preferences.SystemSettingSwitchPreference
+            android:key="notification_guts_kill_app_button"
+            android:title="@string/notifications_kill_app_button_title"
+            android:summary="@string/notifications_kill_app_button_summary"
+            android:defaultValue="false" />
+    </PreferenceCategory>
 </PreferenceScreen>
