--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -95,6 +95,9 @@
     <string name="status_bar_projection_privacy_indicator_summary">Display an indicator when the screen is being projected</string>
 
     <!-- Notifications -->
+    <string name="notifications_interface_category">Interface</string>
+    <string name="notifications_kill_app_button_title">Kill app</string>
+    <string name="notifications_kill_app_button_summary">Show a kill app button in the notification\'s longpress menu</string>
     <string name="notifications_sounds_vibration_category">Sounds &amp; vibration</string>
     <string name="notifications_alert_display_on_title">Alert while display on</string>
     <string name="notifications_alert_display_on_summary">Play sound and vibration for notifications while the display is on</string>
