--- a/res/xml/evolution_settings_lock_screen.xml
+++ b/res/xml/evolution_settings_lock_screen.xml
@@ -70,5 +70,12 @@
             android:title="@string/lock_screen_pocket_detection_title"
             android:summary="@string/lock_screen_pocket_detection_summary"
             android:defaultValue="false" />
+
+        <org.evolution.settings.preferences.SecureSettingSwitchPreference
+            android:key="always_on_pocket_mode_enabled"
+            android:title="@string/lock_screen_always_on_pocket_mode_title"
+            android:summary="@string/lock_screen_always_on_pocket_mode_summary"
+            android:dependency="pocket_mode_enabled"
+            android:defaultValue="false" />
     </PreferenceCategory>
 </PreferenceScreen>
