--- a/res/xml/evolution_settings_status_bar.xml
+++ b/res/xml/evolution_settings_status_bar.xml
@@ -41,6 +41,12 @@
                 <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
         </Preference>
 
+        <org.evolution.settings.preferences.SystemSettingSwitchPreference
+            android:key="data_disabled_icon"
+            android:title="@string/data_disabled_icon_title"
+            android:summary="@string/data_disabled_icon_summary"
+            android:defaultValue="true" />
+
         <!-- Bluetooth battery status -->
         <org.evolution.settings.preferences.SystemSettingSwitchPreference
             android:key="bluetooth_show_battery"
