--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -257,4 +257,8 @@
     <!-- Data disabled indicator -->
     <string name="data_disabled_icon_title">Data disabled indicator</string>
     <string name="data_disabled_icon_summary">Display an indicator next to signal icon when data is disabled</string>
+
+    <!-- 4G icon -->
+    <string name="show_4g_icon_title">4G icon</string>
+    <string name="show_4g_icon_summary">Replace \'LTE\' icon with \'4G\'</string>
 </resources>
