--- a/res/xml/evolution_settings_status_bar.xml
+++ b/res/xml/evolution_settings_status_bar.xml
@@ -47,6 +47,12 @@
             android:summary="@string/data_disabled_icon_summary"
             android:defaultValue="true" />
 
+        <org.evolution.settings.preferences.SystemSettingSwitchPreference
+            android:key="show_fourg_icon"
+            android:title="@string/show_4g_icon_title"
+            android:summary="@string/show_4g_icon_summary"
+            android:defaultValue="false" />
+
         <!-- Bluetooth battery status -->
         <org.evolution.settings.preferences.SystemSettingSwitchPreference
             android:key="bluetooth_show_battery"
