--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -189,6 +189,8 @@
     <string name="lock_screen_fingerprint_category">Fingerprint</string>
     <string name="lock_screen_fingerprint_ripple_title">Ripple animation</string>
     <string name="lock_screen_fingerprint_ripple_summary">Show ripple animation when unlocked with fingerprint</string>
+    <string name="lock_screen_screen_off_udfps_title">Screen-Off UDFPS</string>
+    <string name="lock_screen_screen_off_udfps_summary">Keep UDFPS enabled while the screen is off</string>
 
     <!-- Miscellaneous -->
     <string name="miscellaneous_spoofing_category">Spoofing</string>
