--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -156,6 +156,10 @@
     <string name="clock_date_left">Left of time</string>
     <string name="clock_font_size_title">Clock font size</string>
 
+    <!-- Statusbar Clock background chip -->
+    <string name="statusbar_clock_chip_title">Background chip</string>
+    <string name="statusbar_clock_chip_summary">Display accented chip behind clock</string>
+
     <!-- Status bar/Network traffic -->
     <string name="network_traffic_location_title">Location</string>
     <string name="network_traffic_location_disable">Disabled</string>
