--- a/res/xml/evolution_settings_status_bar.xml
+++ b/res/xml/evolution_settings_status_bar.xml
@@ -99,6 +99,32 @@
             android:defaultValue="false" />
     </PreferenceCategory>
 
+    <!-- Status bar battery customizations -->
+    <PreferenceCategory
+        android:title="@string/status_bar_battery_category_title" >
+
+        <org.evolution.settings.preferences.SystemSettingListPreference
+            android:key="status_bar_battery_style"
+            android:title="@string/status_bar_battery_style_title"
+            android:entries="@array/status_bar_battery_style_entries"
+            android:entryValues="@array/status_bar_battery_style_values"
+            android:defaultValue="0" />
+
+        <org.evolution.settings.preferences.SystemSettingListPreference
+            android:key="status_bar_show_battery_percent"
+            android:title="@string/status_bar_battery_percent_title"
+            android:entries="@array/status_bar_battery_percent_entries"
+            android:entryValues="@array/status_bar_battery_percent_values"
+            android:defaultValue="0" />
+
+        <org.evolution.settings.preferences.SystemSettingSwitchPreference
+            android:key="status_bar_battery_text_charging"
+            android:icon="@drawable/ic_battery_charging"
+            android:title="@string/status_bar_battery_text_charging_title"
+            android:summary="@string/status_bar_battery_text_charging_summary"
+            android:defaultValue="true" />
+    </PreferenceCategory>
+
     <PreferenceCategory
         android:key="status_bar_privacy_indicators_category"
         android:title="@string/status_bar_privacy_indicators_category">
