[TMP] Evolver: Disable empty Buttons category

--- a/res/xml/evolution_settings.xml
+++ b/res/xml/evolution_settings.xml
@@ -58,12 +58,12 @@
         android:fragment="org.evolution.settings.fragments.powermenu.PowerMenu" />
 
     <!-- Buttons -->
-    <Preference
+    <!--Preference
         android:key="buttons"
         android:title="@string/buttons_title"
         android:summary="@string/buttons_summary"
         android:icon="@drawable/ic_buttons"
-        android:fragment="org.evolution.settings.fragments.buttons.Buttons" />
+        android:fragment="org.evolution.settings.fragments.buttons.Buttons" />-->
 
     <!-- Miscellaneous -->
     <Preference
