Evolver: add StatusBar Lyric [2/2]
Signed-off-by: cjybyjk <cjybyjk@zjnu.edu.cn>
Change-Id: Ice2f690476046376a190a41dff70e48451bcb615
Reviewed-on: https://review.exthmui.cn/c/android_packages_apps_exTHmSettings/+/735
Tested-by: Hearn_Maribel_彁 <dingwenxuan4@gmail.com>
Reviewed-by: Hearn_Maribel_彁 <dingwenxuan4@gmail.com>
Signed-off-by: AnierinB <anierin@evolution-x.org>

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -211,6 +211,8 @@
     <string name="status_bar_miscellaneous_category">Miscellaneous</string>
     <string name="status_bar_battery_bar_title">Battery bar</string>
     <string name="status_bar_battery_bar_summary">Display and customize battery bar above status bar</string>
+    <string name="status_bar_lyrics_title">Status bar lyrics</string>
+    <string name="status_bar_lyrics_summary">Display lyrics in status bar (requires StatusBarLyricExt app)</string>
 
     <!-- Status bar/Clock & date-->
     <string name="status_bar_clock_position_title">Clock position</string>
