--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -408,6 +408,16 @@
     <string name="spoofing_games_title">Higher FPS in games</string>
     <string name="spoofing_games_summary">Spoof the device as different models for select games to unlock higher FPS</string>
 
+    <!-- Navigation Bar -->
+    <string name="navbar_layout_category_title">Button navbar</string>
+    <string name="navbar_layout_title">Layout</string>
+    <string name="navbar_layout_normal">Normal</string>
+    <string name="navbar_layout_compact">Compact</string>
+    <string name="navbar_layout_leftleaning">Left-leaning</string>
+    <string name="navbar_layout_rightleaning">Right-leaning</string>
+    <string name="navbar_invert_layout_title">Invert layout</string>
+    <string name="navbar_invert_layout_summary">Inverts the layout of the navigation bar and other items, such as the IME switcher</string>
+
     <!-- About -->
     <string name="about_info">Evolution X aims to provide users with a Pixel-like feel at first glance, with additional features at your disposal</string>
     <string name="about_website_title">Website</string>
