--- a/res/xml/evolution_settings_miscellaneous.xml
+++ b/res/xml/evolution_settings_miscellaneous.xml
@@ -10,6 +10,26 @@
     android:title="@string/miscellaneous_title">
 
     <PreferenceCategory
+        android:key="miscellaneous_navbar_layout_category"
+        android:title="@string/navbar_layout_category_title">
+
+        <org.evolution.settings.preferences.SecureSettingListPreference
+            android:key="navbar_layout_views"
+            android:title="@string/navbar_layout_title"
+            android:summary="%s"
+            android:entries="@array/navbar_layout_entries"
+            android:entryValues="@array/navbar_layout_values"
+            android:defaultValue="default" />
+
+        <org.evolution.settings.preferences.SecureSettingSwitchPreference
+            android:key="navbar_inverse_layout"
+            android:title="@string/navbar_invert_layout_title"
+            android:summary="@string/navbar_invert_layout_summary"
+            android:defaultValue="false" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="miscellaneous_spoofing_category"
         android:title="@string/miscellaneous_spoofing_category">
 
