Evolver: Bring back Snapchat spoof toggle [2/2]

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -407,6 +407,8 @@
     <string name="spoofing_app_specific_category">App-Specific</string>
     <string name="spoofing_games_title">Higher FPS in games</string>
     <string name="spoofing_games_summary">Spoof the device as different models for select games to unlock higher FPS</string>
+    <string name="spoofing_snapchat_title">Snapchat spoof</string>
+    <string name="spoofing_snapchat_summary">Spoof the device as Pixel 2 for Snapchat to allow original quality captures</string>
 
     <!-- Navigation Bar -->
     <string name="navbar_layout_category_title">Button navbar</string>
