Evolver: Bring back Snapchat spoof toggle [2/2]

--- a/res/xml/spoofing.xml
+++ b/res/xml/spoofing.xml
@@ -54,5 +54,12 @@
             android:title="@string/spoofing_games_title"
             android:summary="@string/spoofing_games_summary"
             android:defaultValue="false" />
+
+        <!-- Snapchat -->
+        <org.evolution.settings.preferences.SystemPropertySwitchPreference
+            android:key="persist.sys.pixelprops.snapchat"
+            android:title="@string/spoofing_snapchat_title"
+            android:summary="@string/spoofing_snapchat_summary"
+            android:defaultValue="true" />
     </PreferenceCategory>
 </PreferenceScreen>
