--- a/res/xml/evolution_settings_miscellaneous.xml
+++ b/res/xml/evolution_settings_miscellaneous.xml
@@ -22,6 +22,32 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="miscellaneous_gestures_category"
+        android:title="@string/miscellaneous_three_finger_gestures_title">
+
+        <!-- Three-fingers-swipe gestures -->
+        <org.evolution.settings.preferences.SystemSettingListPreference
+            android:key="three_finger_gesture_action"
+            android:title="@string/miscellaneous_three_finger_gesture_action_title"
+            android:summary="%s"
+            android:dialogTitle="@string/miscellaneous_three_finger_gesture_action_dialog_title"
+            android:entries="@array/shake_gestures_action_entries"
+            android:entryValues="@array/shake_gestures_action_values"
+            android:defaultValue="0" />
+
+        <!-- Three-fingers long press gestures -->
+        <org.evolution.settings.preferences.SystemSettingListPreference
+            android:key="three_finger_long_press_action"
+            android:title="@string/miscellaneous_three_finger_long_press_action_title"
+            android:summary="%s"
+            android:dialogTitle="@string/miscellaneous_three_finger_long_press_action_dialog_title"
+            android:entries="@array/shake_gestures_action_entries"
+            android:entryValues="@array/shake_gestures_action_values"
+            android:defaultValue="0" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="miscellaneous_developer_options_category"
         android:title="@string/miscellaneous_developer_options_category">
 
