--- a/res/values/evolution_arrays.xml
+++ b/res/values/evolution_arrays.xml
@@ -51,20 +51,22 @@
     </string-array>
 
     <!-- Themes - Boot animation -->
-   <string-array name="boot_animation_entries">
+   <string-array name="boot_animation_styles_entries">
         <item>Evolution X</item>
         <item>Cyberpunk</item>
         <item>Google</item>
         <item>Google (Monet)</item>
         <item>Valorant</item>
+        <item>Custom</item>
     </string-array>
 
-    <string-array name="boot_animation_values" translatable="false">
+    <string-array name="boot_animation_styles_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>5</item>
     </string-array>
 
     <!-- Themes - Screen off animation -->
