Evolver: Introduce bootanimation styles [3/3]
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>
Signed-off-by: AnierinB <anierin@evolution-x.org>

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -57,6 +57,7 @@
     <string name="themes_brightness_slider_title">Brightness slider style</string>
     <string name="themes_brightness_slider_summary">Set brightness slider style</string>
     <string name="themes_animations_category">Animations</string>
+    <string name="themes_boot_animation_title">Boot animation</string>
     <string name="themes_screen_off_animation_title">Screen off animation</string>
     <string name="themes_screen_off_animation_default">Default</string>
     <string name="themes_screen_off_animation_crt">CRT</string>
