--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -63,6 +63,7 @@
     <string name="themes_screen_off_animation_scale">Scale</string>
     <string name="themes_udfps_animation_title">UDFPS animation</string>
     <string name="themes_udfps_animation_summary">Set UDFPS animation style</string>
+    <string name="themes_boot_animation_style_title">Bootanimation style</string>
 
     <!-- Themes/Monet Engine -->
     <string name="monet_engine_custom_color_title">Accent color</string>
