Evolver: Add more bootanimation styles [3/3]
Signed-off-by: AnierinB <anierin@evolution-x.org>

--- a/res/values/evolution_arrays.xml
+++ b/res/values/evolution_arrays.xml
@@ -52,11 +52,14 @@
 
     <!-- Themes - Boot animation -->
    <string-array name="boot_animation_entries">
+        <item>Evolution X (Reveal)</item>
         <item>Evolution X</item>
         <item>Evolution X (Anniversary)</item>
+        <item>CyanogenMod</item>
         <item>Cyberpunk</item>
         <item>Google</item>
         <item>Google (Monet)</item>
+        <item>Resurrection Remix</item>
         <item>Valorant</item>
     </string-array>
 
@@ -67,6 +70,9 @@
         <item>3</item>
         <item>4</item>
         <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
     </string-array>
 
     <!-- Themes - Screen off animation -->
