Evolver: Add more bootanimation styles [3/3]
Signed-off-by: AnierinB <anierin@evolution-x.org>

--- a/res/values/evolution_arrays.xml
+++ b/res/values/evolution_arrays.xml
@@ -54,6 +54,7 @@
    <string-array name="boot_animation_entries">
         <item>Evolution X</item>
         <item>Evolution X (Anniversary)</item>
+        <item>CyanogenMod</item>
         <item>Cyberpunk</item>
         <item>Google</item>
         <item>Google (Monet)</item>
@@ -65,6 +66,7 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>5</item>
     </string-array>
 
     <!-- Themes - Screen off animation -->
