Evolver: Add ctOS bootanimation [3/3]
Signed-off-by: 0xsharkboy <achille@0xsharkboy.dev>

--- a/res/values/evolution_arrays.xml
+++ b/res/values/evolution_arrays.xml
@@ -55,6 +55,7 @@
         <item>Evolution X</item>
         <item>Evolution X (Anniv)</item>
         <item>CyanogenMod</item>
+        <item>ctOS</item>
         <item>Cyberpunk</item>
         <item>Google</item>
         <item>Google (Monet)</item>
@@ -73,6 +74,7 @@
         <item>6</item>
         <item>7</item>
         <item>8</item>
+        <item>9</item>
     </string-array>
 
     <!-- Themes - Screen off animation -->
